<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="192dp"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/shape_dialog_header"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/str_error_title"
            android:textColor="@color/colorEventTitle"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/img_dialog_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:scaleType="centerInside"
            android:src="@mipmap/close"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dialog_event"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:text="@string/str_error_content"
        android:textColor="@color/colorEventTitle"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_dialog_ensure"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button"
        android:text="@string/str_ensure"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />
</LinearLayout>