<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/shape_dialog_header"
        android:drawableStart="@mipmap/success"
        android:drawableLeft="@mipmap/success"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingLeft="18dp"
        android:text="@string/str_operation_success"
        android:textColor="@color/colorEventTitle"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dialog_event"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@drawable/shape_header"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:text="@string/str_dialog_event"
        android:textColor="@color/colorBlack"
        android:textSize="11sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_extra_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/str_extra_info"
        android:textColor="@color/colorExtra"
        android:textSize="11sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_dialog_ensure"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_marginTop="13dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button"
        android:text="@string/str_ensure"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />
</LinearLayout>