<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_header"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/str_event_name"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/str_event_description"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_send_event"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_button"
        android:text="@string/str_event_start"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_header"
        android:paddingLeft="34dp"
        android:paddingBottom="8dp"
        android:text="@string/str_event_attribute"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:scrollbarThumbHorizontal="@color/colorBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_event"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="10dp" />

    </HorizontalScrollView>

</LinearLayout>